<resources>
    <string name="app_name">Help</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="categories">
        <item>หมวดหมู่ผู้พิการ</item>
        <item>การมองเห็น</item>
        <item>การได้ยิน</item>
        <item>การเคลื่อนไหวร่างกาย</item>
        <item>สติปัญญา</item>
        <item>ออทิสติก</item>
        <item>ผู้สูอายุ</item>
    </string-array>

    <string name="forgotPassword"><u>ลืมรหัสผ่าน</u></string>
    <string name="login"><u>Login</u></string>
    <string name="register"><u>สมัครสมาชิก</u></string>
    <string name="assignScore"><u>ให้คะแนนอาสาช่วยเหลือ</u></string>
    <string name="saveScore"><u>บันทึกการให้คะแนน</u></string>
    <string name="register_volunteer">ลงทะเบียนอาสา</string>
    <string name="register_disabled">ลงทะเบียนขอความช่วยเหลือ</string>

    <string name="enterFirstName">กรุณากรอกชื่อ</string>
    <string name="enterLastName">กรุณากรอกนามสกุล</string>
    <string name="enterTel">กรุณากรอกเบอร์โทรศัพท์</string>
    <string name="enterEmail">กรุณากรอกอีเมล</string>
    <string name="enterPassword">กรุณากรอกรหัสผ่าน</string>
    <string name="enterRePassword">กรุณากรอกรหัสผ่านอีกครั้ง</string>
    <string name="enterCountry">กรุณากรอกจังหวัดอีกครั้ง</string>
    <string name="enterZipCode">กรุณากรอกรหัสไปรษณีย์อีกครั้ง</string>
    <string name="google_map_key">AIzaSyAAvAkStdqxfjT3epnqZB4Po_joHkrnVgM</string>
</resources>