<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Help.AppBarOverlay">

            <include layout="@layout/custom_toolbar"></include>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HELP"
                    android:textSize="35dp"
                    android:textStyle="bold"
                    android:textColor="@color/black">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ชื่อ"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black">

                    </TextView>

                    <EditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="7dp"
                        android:hint="@string/enterFirstName"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:inputType="textPersonName"
                        android:background="@color/lightGray">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="นามสกุล"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black">

                    </TextView>

                    <EditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="7dp"
                        android:inputType="textPersonName"
                        android:hint="@string/enterLastName"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:background="@color/lightGray">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="เบอร์โทรศัพท์"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black">

                    </TextView>

                    <EditText
                        android:id="@+id/tel"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="7dp"
                        android:maxLength="10"
                        android:inputType="number"
                        android:hint="@string/enterTel"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:background="@color/lightGray">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="อีเมล"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black">

                    </TextView>

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="7dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:hint="@string/enterEmail"
                        android:textSize="15dp"
                        android:background="@color/lightGray">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="รหัสผ่าน"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black">

                    </TextView>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:inputType="textPassword"
                        android:paddingHorizontal="7dp"
                        android:hint="@string/enterPassword"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:maxLength="20"
                        android:background="@color/lightGray">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ยืนยันรหัสผ่านอีกครั้ง"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:textColor="@color/black">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="*"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:layout_marginStart="2dp"
                            android:textColor="@color/red">
                        </TextView>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/re_password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:inputType="textPassword"
                        android:hint="@string/enterRePassword"
                        android:paddingHorizontal="7dp"
                        android:textSize="15dp"
                        android:maxLength="20"
                        android:textColor="@color/black"
                        android:background="@color/lightGray">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submit"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="ดำเนินการต่อ"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/lightGreen"
                        android:paddingHorizontal="35dp"
                        android:paddingVertical="13dp"
                        app:cornerRadius="18dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>