<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Help.AppBarOverlay">

            <include layout="@layout/custom_toolbar"></include>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="28dp"
                android:layout_marginHorizontal="25dp"
                android:orientation="vertical"
                android:gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="เข้าสู่ระบบ"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/black">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="ใส่อีเมลที่คุณลงทะเบียนไว้เพื่อเข้าสู่ระบบ"
                    android:textSize="15dp"
                    android:textColor="@color/black">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="อีเมล"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:tooltipText="sdfdsf"
                        android:textColor="@color/black">

                    </TextView>

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="7dp"
                        android:hint="@string/enterEmail"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint"
                        android:textSize="15dp"
                        android:inputType="textPersonName"
                        android:background="@color/lightGray">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="รหัสผ่าน"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black">

                    </TextView>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="7dp"
                        android:maxLength="20"
                        android:hint="@string/enterPassword"
                        android:textColorHint="@color/hint"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:inputType="textPassword"
                        android:background="@color/lightGray">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgotPassword"
                        android:textColor="@color/black"
                        android:textSize="13dp">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submit"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="ยืนยัน"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/lightGreen"
                        android:paddingHorizontal="55dp"
                        android:paddingVertical="13dp"
                        app:cornerRadius="18dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>